update my-accounts route to new architecture
